Update structure a bit

--- a/training/index.html
+++ b/training/index.html
@@ -29,12 +29,10 @@
 
 <body>
 
-<h1 class="header">Training</h1>
+<h1 class="header">Speaking and Teaching</h1>
 
 <section class="dark">
-<h2 class="header">Speaking and Teaching</h2>
-
-<<div class="contents2-title">Topics</div>>
+<h2>Topics</h2>
 
 I share as a practitioner with a wide range of interest in topics:
 <ul>
@@ -44,12 +42,14 @@ I share as a practitioner with a wide range of interest in topics:
 <li class="bullet"> Social Software Development Approaches (ensemble and pair programming)</li>
 <li class="bullet"> Teaching and Mentoring Testers and Programmers</li>
 <li class="bullet"> Learning and Experimentation</li>
-<li class="bullet"> Modern Agile </li>
-<li class="bullet"> Developer Productivity, Metrics and Management </li>
-<li class="bullet"> Conference Speaking </li>
+<li class="bullet"> Modern Agile</li>
+<li class="bullet"> Developer Productivity, Metrics and Management</li>
+<li class="bullet"> Conference Speaking</li>
 </ul>
+</section>
 
-<div class="contents2-title"> Minimalistic Speaker Rider </div>
+<section class="light">
+<div> Minimalistic Speaker Rider </div>
 
 June 2023 - June 2024 I was retired from speaking. Since I will become a contractor representative in June, my change of employment is
 is unretiring me but also in control of all of my speaking / training engagements.<p>
@@ -67,21 +67,27 @@ I have a few things I need to join an event:
 I don't participate in calls for proposals and consider invitation necessary. In encourage conference
 organizers to consider all my talks on this site as proposals you can consider,
 and I would be happy to deliver if I can make the schedule work. <p>
+</section>
 
-<div class="contents2-title"> My Sessions </div>
+<section class="dark">
+<h2> My Sessions </h2>
 
 I teach courses (0.5 days -> 3 days), also split into 2 hour sessions which is
 works great for remote learning. My workshops are single-purpose sessions that
 stand independent and are usually 1.5 - 2 hours. My talks are 30 - 60 minutes.
 
 My free public sessions are posted under <a class="blacktext" href="https://ti.to/exploratory-testing-academy">Exploratory Testing Academy tito</a>.
+</section>
 
-<div class="contents2-title"> Brochures </div>
+<section class="light">
+<h2> Speaker materials </h2>
 
 <a class="blacktext" href="https://docs.google.com/document/d/1CJBUTPd7MKY95GayHsKJAm5mNLfd7fIfj5kASowOOZk/edit?usp=sharing">Bio</a>
-| <a class="blacktext" href="https://drive.google.com/file/d/1fu7ZyVgJsS3QeOCbMfENDJrbibjNSCsW/view?usp=sharing">Speaker Image</a>
+<a class="blacktext" href="https://drive.google.com/file/d/1fu7ZyVgJsS3QeOCbMfENDJrbibjNSCsW/view?usp=sharing">Speaker Image</a>
+</section>
 
-<div class="contents2-title"> Courses </div>
+<section class="dark">
+<h2> Courses </h2>
 
 <a href="https://docs.google.com/document/d/1CRlHmNY_aPiZS479a5tP6-Uc-OWeqe6-lN0jwhcFLOQ/edit?usp=sharing">Ensemble Testing (1 day)</a><br>
 <a href="https://docs.google.com/document/d/1PYCADefWRYfqrKdp-hclaQduiGFFtUVGmUSTNtAOIP8/edit?usp=sharing">Exploratory Testing Foundations (1 day)</a> <br>
@@ -95,8 +101,10 @@ Exploratory Testing Applied (2 days)<br>
 Software and System Testing Foundations (1 day)<br>
 Test Design (2 days) | <a href="https://docs.google.com/document/d/1ro9yeeIRh0wrchOFOTPLek63WiH8tNbz4Qo7w-pZVVQ/edit?usp=sharing">Testitapausten suunnittelu (2 päivää)</a><br>
 Test Activity Sampler (1 day)<br>
+</section>
 
-<div class="contents2-title"> Workshops </div>
+<section class="light">
+<h2> Workshops </h2>
 
 <a href="https://docs.google.com/document/d/1iI3-rBGKf3NlzH0CqGUsbcJIC-9UWS3e80OrAKhxcm4/edit?usp=sharing">Exploratory Testing with a Constraint: Automation (99 minutes)</a><br>
 <a href="https://docs.google.com/document/d/1zHAIX-m77jBIyr67JKmpsWuIduVtYefsCxPpuWhgnzY/edit?usp=sharing">Exploratory Testing with a Constraint: Unconfirmed issues (99 minutes)</a><br>
@@ -111,7 +119,6 @@ Ensemble Testing Roleplay (99 minutes)<br>
 Visual Test Retrospective (99 minutes)<br>
 Test Strategy Visualization (99 minutes)<br>
 Becoming Public Speaker (99 minutes)<br>
-
 </section>
 
 
