Improve texts on main

--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
 
         <div class="card">
             <i class="fas fa-magic"></i>
-            <h5>Training</h5>
+            <h5>Speaking and Teaching</h5>
             <div class="preview">
-                <p>I teach many courses that I am happy to deliver, or tailor for specific needs. I teach hands-on, doing the work.</p>
+                <p>I teach many topics on talk, course and workshop formats, and tailor for specific needs. I teach courses hands-on, doing the work.</p>
                 <p style="text-align:center;">
                     <a class="button" href="./training/index.html">Read more...</a>
                 </p>
