--- a/training/index.html
+++ b/training/index.html
@@ -37,7 +37,7 @@
 I share as a practitioner with a wide range of interest in topics:
 <ul>
     <li class="bullet"> Software Testing - Exploratory Testing and Test Automation</li>
-    <li class="bullet"> Tech Ecosystems as Context (experiences ranging from windows applications to cloud and embedded software; product develoment and IT projects)</li>
+    <li class="bullet"> Tech Ecosystems as Context (experiences ranging from windows applications to cloud and embedded software; product development and IT projects)</li>
     <li class="bullet"> Social Software Testing Approaches (ensemble and pair testing)</li>
     <li class="bullet"> Social Software Development Approaches (ensemble and pair programming)</li>
     <li class="bullet"> Teaching and Mentoring Testers and Programmers</li>
