Add style for black text on white

--- a/training/index.html
+++ b/training/index.html
@@ -49,8 +49,9 @@ I share as a practitioner with a wide range of interest in topics:
 </section>
 
 <section class="light">
-<div> Minimalistic Speaker Rider </div>
+<h2> Minimalistic Speaker Rider </h2>
 
+<p>
 June 2023 - June 2024 I was retired from speaking. Since I will become a contractor representative in June, my change of employment is
 is unretiring me but also in control of all of my speaking / training engagements.<p>
 
