--- a/training/index.html
+++ b/training/index.html
@@ -36,15 +36,15 @@
 
 I share as a practitioner with a wide range of interest in topics:
 <ul>
-    <li class="bullet"> Software Testing - Exploratory Testing and Test Automation</li>
-    <li class="bullet"> Tech Ecosystems as Context (experiences ranging from windows applications to cloud and embedded software; product development and IT projects)</li>
-    <li class="bullet"> Social Software Testing Approaches (ensemble and pair testing)</li>
-    <li class="bullet"> Social Software Development Approaches (ensemble and pair programming)</li>
-    <li class="bullet"> Teaching and Mentoring Testers and Programmers</li>
-    <li class="bullet"> Learning and Experimentation</li>
-    <li class="bullet"> Modern Agile</li>
-    <li class="bullet"> Developer Productivity, Metrics and Management</li>
-    <li class="bullet"> Conference Speaking</li>
+    <li> Software Testing - Exploratory Testing and Test Automation</li>
+    <li> Tech Ecosystems as Context (experiences ranging from windows applications to cloud and embedded software; product development and IT projects)</li>
+    <li> Social Software Testing Approaches (ensemble and pair testing)</li>
+    <li> Social Software Development Approaches (ensemble and pair programming)</li>
+    <li> Teaching and Mentoring Testers and Programmers</li>
+    <li> Learning and Experimentation</li>
+    <li> Modern Agile</li>
+    <li> Developer Productivity, Metrics and Management</li>
+    <li> Conference Speaking</li>
 </ul>
 </section>
 
@@ -59,11 +59,11 @@ I will limit my speaking, and welcome keynotes and community events, especially 
 
 I have a few things I need to join an event:
 <ul>
-    <li class="bullet"> Invite me - I don't invest time on Call for Proposals and I'm happy to design talk for your session.</li>
-    <li class="bullet"> I don't pay to speak - that means travel and accommodation is not out of my pocket.</li>
-    <li class="bullet"> Invite me for my expertise. My gender is a plus and I am happy to introduce you to women and non-binary folks in the hundreds.</li>
-    <li class="bullet"> Filter the abusive messages from feedback. I don't want to receive hate mail disguised as "feedback" again.</li>
-    <li class="bullet"> Consider culture of your event. Many people say they expect a code of conduct, and it's an awareness flag.</li>
+    <li> Invite me - I don't invest time on Call for Proposals and I'm happy to design talk for your session.</li>
+    <li> I don't pay to speak - that means travel and accommodation is not out of my pocket.</li>
+    <li> Invite me for my expertise. My gender is a plus and I am happy to introduce you to women and non-binary folks in the hundreds.</li>
+    <li> Filter the abusive messages from feedback. I don't want to receive hate mail disguised as "feedback" again.</li>
+    <li> Consider culture of your event. Many people say they expect a code of conduct, and it's an awareness flag.</li>
 </ul>
 
 I don't participate in calls for proposals and consider invitation necessary. In encourage conference
@@ -89,35 +89,35 @@ stand independent and are usually 1.5 - 2 hours. My talks are 30 - 60 minutes.
 <h2> Courses </h2>
 
 <li class="bullet"> <a href="https://docs.google.com/document/d/1CRlHmNY_aPiZS479a5tP6-Uc-OWeqe6-lN0jwhcFLOQ/edit?usp=sharing">Ensemble Testing (1 day)</a></li>
-    <li class="bullet"> <a href="https://docs.google.com/document/d/1PYCADefWRYfqrKdp-hclaQduiGFFtUVGmUSTNtAOIP8/edit?usp=sharing">Exploratory Testing Foundations (1 day)</a></li>
-    <li class="bullet"> <a href="https://docs.google.com/document/d/1QR_H0ERz0sHLouiLLf37yVrZ4fewsrvZMHWKZZVgETw/edit?usp=sharing">Exploratory Testing Work Course (1 day)</a> | Exploratory Testing Work Course (2 days) | <a class="blacktext" href="https://docs.google.com/document/d/1KsJJmikGQZfzY5MoAWJBEu_gsC3HLq4uubrTWsfuoSQ/edit?usp=sharing">Tutkivan Testauksen työkurssi (2 päivää)</a></li>
-    <li class="bullet"> <a href="https://docs.google.com/document/d/1sOPvR5yiHkH5zgagKAiM1TpmY94pIMMZl2GpIpQ1fMo/edit?usp=sharing">Exploratory Testing on Computer Interfaces (APIs)</a></li>
-    <li class="bullet"> <a href="https://docs.google.com/document/d/18SEGRpCm2fB-lQpIlm7m1l2r96mE1foGypBHh-FBm1M/edit?usp=sharing">Diversifying Test Approaches using Constraints (1 day)</a></li>
-    <li class="bullet"> <a href="https://docs.google.com/document/d/1B2mCP7Pm9ffVuJ838Dm85-SyebqkcxDeUgeobkLahhw/edit?usp=sharing">Exploratory Testing Essentials (1/2 day)</a></li>
-    <li class="bullet"> Test Automation Sampler (1 day)</li>
-    <li class="bullet"> Contemporary Test Management (1 day)</li>
-    <li class="bullet"> Exploratory Testing Applied (2 days)</li>
-    <li class="bullet"> Software and System Testing Foundations (1 day)</li>
-    <li class="bullet"> Test Design (2 days) | <a href="https://docs.google.com/document/d/1ro9yeeIRh0wrchOFOTPLek63WiH8tNbz4Qo7w-pZVVQ/edit?usp=sharing">Testitapausten suunnittelu (2 päivää)</a></li>
-    <li class="bullet"> Test Activity Sampler (1 day)</li>
+    <li> <a href="https://docs.google.com/document/d/1PYCADefWRYfqrKdp-hclaQduiGFFtUVGmUSTNtAOIP8/edit?usp=sharing">Exploratory Testing Foundations (1 day)</a></li>
+    <li> <a href="https://docs.google.com/document/d/1QR_H0ERz0sHLouiLLf37yVrZ4fewsrvZMHWKZZVgETw/edit?usp=sharing">Exploratory Testing Work Course (1 day)</a> | Exploratory Testing Work Course (2 days) | <a class="blacktext" href="https://docs.google.com/document/d/1KsJJmikGQZfzY5MoAWJBEu_gsC3HLq4uubrTWsfuoSQ/edit?usp=sharing">Tutkivan Testauksen työkurssi (2 päivää)</a></li>
+    <li> <a href="https://docs.google.com/document/d/1sOPvR5yiHkH5zgagKAiM1TpmY94pIMMZl2GpIpQ1fMo/edit?usp=sharing">Exploratory Testing on Computer Interfaces (APIs)</a></li>
+    <li> <a href="https://docs.google.com/document/d/18SEGRpCm2fB-lQpIlm7m1l2r96mE1foGypBHh-FBm1M/edit?usp=sharing">Diversifying Test Approaches using Constraints (1 day)</a></li>
+    <li> <a href="https://docs.google.com/document/d/1B2mCP7Pm9ffVuJ838Dm85-SyebqkcxDeUgeobkLahhw/edit?usp=sharing">Exploratory Testing Essentials (1/2 day)</a></li>
+    <li> Test Automation Sampler (1 day)</li>
+    <li> Contemporary Test Management (1 day)</li>
+    <li> Exploratory Testing Applied (2 days)</li>
+    <li> Software and System Testing Foundations (1 day)</li>
+    <li> Test Design (2 days) | <a href="https://docs.google.com/document/d/1ro9yeeIRh0wrchOFOTPLek63WiH8tNbz4Qo7w-pZVVQ/edit?usp=sharing">Testitapausten suunnittelu (2 päivää)</a></li>
+    <li> Test Activity Sampler (1 day)</li>
 </section>
 
 <section class="light">
 <h2> Workshops </h2>
 
-<li class="bullet"><a href="https://docs.google.com/document/d/1iI3-rBGKf3NlzH0CqGUsbcJIC-9UWS3e80OrAKhxcm4/edit?usp=sharing">Exploratory Testing with a Constraint: Automation (99 minutes)</a></li>
-<li class="bullet"><a href="https://docs.google.com/document/d/1zHAIX-m77jBIyr67JKmpsWuIduVtYefsCxPpuWhgnzY/edit?usp=sharing">Exploratory Testing with a Constraint: Unconfirmed issues (99 minutes)</a></li>
-<li class="bullet"><a href="https://docs.google.com/document/d/1tjiMGzoDd-pfhMp2ZzrI-q4zHYSxvaHc7Wg_2oxeMfo/edit?usp=sharing">Exploratory Testing with a Constraint: Self-Management (99 minutes)</a></li>
-<li class="bullet"><a href="https://docs.google.com/document/d/1o5QnEit5E-BfEyZptWGoz214an2dR14eCW2Qi64v3fo/edit?usp=sharing">Test a Text Field, Test a Button (99 minutes)</a></li>
-<li class="bullet">Incremental Test Planning (99 minutes)</li>
-<li class="bullet">Test Coverages: Code, Requirements, Risks (99 minutes)</li>
-<li class="bullet">Exploratory Testing an API (99 minutes)</li>
-<li class="bullet">Mock the Response to Target Testing (99 minutes)</li>
-<li class="bullet">Ensemble Testing Roleplay (99 minutes)</li>
-<li class="bullet"><a href="https://docs.google.com/document/d/1pufTLEjpsC-6WX_VH1L5PHK1Utusk4uolc8dR9iZnf8/edit?usp=sharing">Contemporary Exploratory Testing Ask Anyone Anything (99 minutes)</a></li>
-<li class="bullet">Visual Test Retrospective (99 minutes)</li>
-<li class="bullet">Test Strategy Visualization (99 minutes)</li>
-<li class="bullet">Becoming Public Speaker (99 minutes)</li>
+<li><a href="https://docs.google.com/document/d/1iI3-rBGKf3NlzH0CqGUsbcJIC-9UWS3e80OrAKhxcm4/edit?usp=sharing">Exploratory Testing with a Constraint: Automation (99 minutes)</a></li>
+<li><a href="https://docs.google.com/document/d/1zHAIX-m77jBIyr67JKmpsWuIduVtYefsCxPpuWhgnzY/edit?usp=sharing">Exploratory Testing with a Constraint: Unconfirmed issues (99 minutes)</a></li>
+<li><a href="https://docs.google.com/document/d/1tjiMGzoDd-pfhMp2ZzrI-q4zHYSxvaHc7Wg_2oxeMfo/edit?usp=sharing">Exploratory Testing with a Constraint: Self-Management (99 minutes)</a></li>
+<li><a href="https://docs.google.com/document/d/1o5QnEit5E-BfEyZptWGoz214an2dR14eCW2Qi64v3fo/edit?usp=sharing">Test a Text Field, Test a Button (99 minutes)</a></li>
+<li>Incremental Test Planning (99 minutes)</li>
+<li>Test Coverages: Code, Requirements, Risks (99 minutes)</li>
+<li>Exploratory Testing an API (99 minutes)</li>
+<li>Mock the Response to Target Testing (99 minutes)</li>
+<li>Ensemble Testing Roleplay (99 minutes)</li>
+<li><a href="https://docs.google.com/document/d/1pufTLEjpsC-6WX_VH1L5PHK1Utusk4uolc8dR9iZnf8/edit?usp=sharing">Contemporary Exploratory Testing Ask Anyone Anything (99 minutes)</a></li>
+<li>Visual Test Retrospective (99 minutes)</li>
+<li>Test Strategy Visualization (99 minutes)</li>
+<li>Becoming Public Speaker (99 minutes)</li>
 </section>
 
 
