--- a/training/index.html
+++ b/training/index.html
@@ -44,7 +44,7 @@ I share as a practitioner with a wide range of interest in topics:
     <li> Learning and Experimentation</li>
     <li> Modern Agile</li>
     <li> Developer Productivity, Metrics and Management</li>
-    <li> Conference Speaking</li>
+    <li> Conference Design and Speaking</li>
 </ul>
 </section>
 
