--- a/training/index.html
+++ b/training/index.html
@@ -66,9 +66,9 @@ I have a few things I need to join an event:
     <li> Consider culture of your event. Many people say they expect a code of conduct, and it's an awareness flag.</li>
 </ul>
 
-I don't participate in calls for proposals and consider invitation necessary. In encourage conference
+<p>I don't participate in calls for proposals and consider invitation necessary. In encourage conference
 organizers to consider all my talks on this site as proposals you can consider,
-and I would be happy to deliver if I can make the schedule work. <p>
+and I would be happy to deliver if I can make the schedule work. </p>
 </section>
 
 <section class="dark">
