--- a/training/index.html
+++ b/training/index.html
@@ -51,13 +51,12 @@ I share as a practitioner with a wide range of interest in topics:
 <section class="light">
 <h2> Minimalistic Speaker Rider </h2>
 
-<p>
-June 2023 - June 2024 I was retired from speaking. Since I will become a contractor representative in June, my change of employment is
-is unretiring me but also in control of all of my speaking / training engagements.<p>
+<h3>June 2023 - June 2024 I was retired from speaking. Since I will become a contractor representative in June, my change of employment is
+is unretiring me but also in control of all of my speaking / training engagements.</h3>
 
-I will limit my speaking, and welcome keynotes and community events, especially when travel is manageable.<p>
+<h3>I will limit my speaking, and welcome keynotes and community events, especially when travel is manageable.</h3>
 
-I have a few things I need to join an event:
+<h3>I have a few things I need to join an event:</h3>
 <br>
 <ul>
     <li> Invite me - I don't invest time on Call for Proposals and I'm happy to design talk for your session.</li>
@@ -67,9 +66,9 @@ I have a few things I need to join an event:
     <li> Consider culture of your event. Many people say they expect a code of conduct, and it's an awareness flag.</li>
 </ul>
 
-<p>I don't participate in calls for proposals and consider invitation necessary. In encourage conference
+<h3>I don't participate in calls for proposals and consider invitation necessary. In encourage conference
 organizers to consider all my talks on this site as proposals you can consider,
-and I would be happy to deliver if I can make the schedule work. </p>
+and I would be happy to deliver if I can make the schedule work. </h3>
 </section>
 
 <section class="dark">
