--- a/training/index.html
+++ b/training/index.html
@@ -52,7 +52,7 @@ I share as a practitioner with a wide range of interest in topics:
 <h2> Minimalistic Speaker Rider </h2>
 
 <h3>June 2023 - June 2024 I was retired from speaking. Since I will become a contractor representative in June, my change of employment is
-is unretiring me but also in control of all of my speaking / training engagements.</h3>
+unretiring me but also in control of all of my speaking / training engagements.</h3>
 
 <h3>I will limit my speaking, and welcome keynotes and community events, especially when travel is manageable.</h3>
 
