--- a/training/index.html
+++ b/training/index.html
@@ -37,7 +37,9 @@
 I share as a practitioner with a wide range of interest in topics:
 <ul>
     <li> Software Testing - Exploratory Testing and Test Automation</li>
-    <li> Tech Ecosystems as Context (experiences ranging from windows applications to cloud and embedded software; product development and IT projects)</li>
+    <li> Tech Ecosystems as Context <br>
+        (experiences ranging from windows applications to cloud and embedded software; <br>
+        product development and IT projects)</li>
     <li> Social Software Testing Approaches (ensemble and pair testing)</li>
     <li> Social Software Development Approaches (ensemble and pair programming)</li>
     <li> Teaching and Mentoring Testers and Programmers</li>
