Update training page

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="preview">
                 <p>I have spoken in 28 countries, delivering 50 keynotes and 529 talks by end of 2023. </p>
                 <p style="text-align:center;">
-                    <a class="button" href="./past_talks/index.html">Read more...</a>
+                    <a class="button" href="./past_talks/">Read more...</a>
                 </p>
             </div>
         </div>
@@ -183,7 +183,7 @@
             <div class="preview">
                 <p>I teach many topics on talk, course and workshop formats, and tailor for specific needs. I teach courses hands-on, doing the work.</p>
                 <p style="text-align:center;">
-                    <a class="button" href="./training/index.html">Read more...</a>
+                    <a class="button" href="./training/">Read more...</a>
                 </p>
             </div>
         </div>
