--- a/training/index.html
+++ b/training/index.html
@@ -53,22 +53,27 @@ I share as a practitioner with a wide range of interest in topics:
 <section class="light">
 <h2> Minimalistic Speaker Rider </h2>
 
-<div>June 2023 - June 2024 I was retired from speaking. Since I will become a contractor representative in June, my change of employment is
+<div class="explain-light">June 2023 - June 2024 I was retired from speaking. Since I will become a contractor representative in June, my change of employment is
 unretiring me but also in control of all of my speaking / training engagements.</div>
 
-<div>I will limit my speaking, and welcome keynotes and community events, especially when travel is manageable.</div>
-
-<div>I have a few things I need to join an event:</div>
+<div class="explain-light">I will limit my speaking, and welcome keynotes and community events, especially when travel is manageable.</div>
 <br>
+<div class="explain-light">I have a few <span>things I need</span> to join an event:</div>
 <ul>
-    <li> Invite me - I don't invest time on Call for Proposals and I'm happy to design talk for your session.</li>
-    <li> I don't pay to speak - that means travel and accommodation is not out of my pocket.</li>
-    <li> Invite me for my expertise. My gender is a plus and I am happy to introduce you to women and non-binary folks in the hundreds.</li>
-    <li> Filter the abusive messages from feedback. I don't want to receive hate mail disguised as "feedback" again.</li>
-    <li> Consider culture of your event. Many people say they expect a code of conduct, and it's an awareness flag.</li>
+    <li> <span>Invite me</span> - I don't invest time on Call for Proposals and I'm happy to design talk for your session.</li>
+    <li> <span>No pay to speak</span> - that means travel and accommodation is not out of my pocket.</li>
+    <li><span> Invite me for my expertise</span>. My gender is a plus and I am happy to introduce you to women and non-binary folks in the hundreds.</li>
+    <li> <span>Filter</span> the abusive messages from <span>feedback</span>. I don't want to receive hate mail disguised as "feedback" again.</li>
+    <li> <span>Consider culture of your event</span>. Many people say they expect a code of conduct, and it's an awareness flag.</li>
 </ul>
 
-<div>I don't participate in calls for proposals and consider invitation necessary. In encourage conference
+<br>
+<div class="explain-light">When I am at an event, I prefer mingling with the participants throughout the whole event.
+    I believe it should be a standard requested of a speaker that they stay around. However, I have a very short list of
+    people I will not mingle with, and I won't publish that list. If we end up at same location, I will yield and retreat to only deliver my talk.
+    If I notice in advance, I will let the organizer know.</div>
+
+<div class="explain-light">I don't participate in calls for proposals and consider invitation necessary. I encourage conference
 organizers to consider all my talks on this site as proposals you can consider,
 and I would be happy to deliver if I can make the schedule work. </div>
 </section>
@@ -76,21 +81,23 @@ and I would be happy to deliver if I can make the schedule work. </div>
 <section class="dark">
 <h2> My Sessions </h2>
 
-I teach courses (0.5 days -> 3 days), also split into 2 hour sessions which is works great for remote learning. My workshops are single-purpose sessions that
-stand independent and are usually 1.5 - 2 hours. My talks are 30 - 60 minutes.
+<div class="explain-dark">I teach courses (0.5 days -> 3 days), also split into 2 hour sessions which is works great for remote learning. My workshops are single-purpose sessions that
+stand independent and are usually 1.5 - 2 hours. My talks are 30 - 60 minutes.</div>
 </section>
 
 <section class="light">
 <h2> Speaker materials </h2>
-
-<a class="blacktext" href="https://docs.google.com/document/d/1CJBUTPd7MKY95GayHsKJAm5mNLfd7fIfj5kASowOOZk/edit?usp=sharing">Bio</a>
-<a class="blacktext" href="https://drive.google.com/file/d/1fu7ZyVgJsS3QeOCbMfENDJrbibjNSCsW/view?usp=sharing">Speaker Image</a>
+<ul>
+<li><a href="https://docs.google.com/document/d/1CJBUTPd7MKY95GayHsKJAm5mNLfd7fIfj5kASowOOZk/edit?usp=sharing">Bio</a></li>
+<li><a href="https://drive.google.com/file/d/1fu7ZyVgJsS3QeOCbMfENDJrbibjNSCsW/view?usp=sharing">Speaker Image</a></li>
+</ul>
 </section>
 
 <section class="dark">
 <h2> Courses </h2>
 
-<li class="bullet"> <a href="https://docs.google.com/document/d/1CRlHmNY_aPiZS479a5tP6-Uc-OWeqe6-lN0jwhcFLOQ/edit?usp=sharing">Ensemble Testing (1 day)</a></li>
+<ul>
+    <li> <a href="https://docs.google.com/document/d/1CRlHmNY_aPiZS479a5tP6-Uc-OWeqe6-lN0jwhcFLOQ/edit?usp=sharing">Ensemble Testing (1 day)</a></li>
     <li> <a href="https://docs.google.com/document/d/1PYCADefWRYfqrKdp-hclaQduiGFFtUVGmUSTNtAOIP8/edit?usp=sharing">Exploratory Testing Foundations (1 day)</a></li>
     <li> <a href="https://docs.google.com/document/d/1QR_H0ERz0sHLouiLLf37yVrZ4fewsrvZMHWKZZVgETw/edit?usp=sharing">Exploratory Testing Work Course (1 day)</a> | Exploratory Testing Work Course (2 days) | <a class="blacktext" href="https://docs.google.com/document/d/1KsJJmikGQZfzY5MoAWJBEu_gsC3HLq4uubrTWsfuoSQ/edit?usp=sharing">Tutkivan Testauksen työkurssi (2 päivää)</a></li>
     <li> <a href="https://docs.google.com/document/d/1sOPvR5yiHkH5zgagKAiM1TpmY94pIMMZl2GpIpQ1fMo/edit?usp=sharing">Exploratory Testing on Computer Interfaces (APIs)</a></li>
@@ -102,11 +109,13 @@ stand independent and are usually 1.5 - 2 hours. My talks are 30 - 60 minutes.
     <li> Software and System Testing Foundations (1 day)</li>
     <li> Test Design (2 days) | <a href="https://docs.google.com/document/d/1ro9yeeIRh0wrchOFOTPLek63WiH8tNbz4Qo7w-pZVVQ/edit?usp=sharing">Testitapausten suunnittelu (2 päivää)</a></li>
     <li> Test Activity Sampler (1 day)</li>
+</ul>
 </section>
 
 <section class="light">
 <h2> Workshops </h2>
 
+<ul>
 <li><a href="https://docs.google.com/document/d/1iI3-rBGKf3NlzH0CqGUsbcJIC-9UWS3e80OrAKhxcm4/edit?usp=sharing">Exploratory Testing with a Constraint: Automation (99 minutes)</a></li>
 <li><a href="https://docs.google.com/document/d/1zHAIX-m77jBIyr67JKmpsWuIduVtYefsCxPpuWhgnzY/edit?usp=sharing">Exploratory Testing with a Constraint: Unconfirmed issues (99 minutes)</a></li>
 <li><a href="https://docs.google.com/document/d/1tjiMGzoDd-pfhMp2ZzrI-q4zHYSxvaHc7Wg_2oxeMfo/edit?usp=sharing">Exploratory Testing with a Constraint: Self-Management (99 minutes)</a></li>
@@ -120,6 +129,7 @@ stand independent and are usually 1.5 - 2 hours. My talks are 30 - 60 minutes.
 <li>Visual Test Retrospective (99 minutes)</li>
 <li>Test Strategy Visualization (99 minutes)</li>
 <li>Becoming Public Speaker (99 minutes)</li>
+</ul>
 </section>
 
 
