Contributions page outline

--- a/contributions/index.html
+++ b/contributions/index.html
@@ -29,20 +29,30 @@
 
 <body>
 
+<h1 class="header">Contributions: Books, Blogs, Articles, Podcasts</h1>
 
+<section class="dark">
+<h2>Blogs I Write in</h2>
+<ul>
+       <li><a href="http://visible-quality.blogspot.fi">A Seasoned Testers Crystal Ball</a></li>
+          <li><a href="https://medium.com/@maaretp">Maaret on Medium</a></li>
+          <li><a href="https://dev.to/maaretp">Talks Turned Articles</a></li>
+</ul>
+</section>
 
-<section class="dark" id="dark">
-<h2 class="header">Books, Blogs, Articles and Podcasts</h2>
-<div class="books">
-    <h1>Books</h1>
+<section class="light">
+    <h2>Books</h2>
     <a href="http://exploratorytesting.xyz"><img class="books" src="../images/Book-ET.png" alt="Exploratory Testing book"></a>
     <a href="https://ensembleprogramming.xyz"><img class="books" src="../images/Book-Ensemble.png" alt="Ensemble Programming Guidebook"></a>
     <a href="http://strongstylepairprogramming.xyz"><img class="books" src="../images/Book-Pairing.png" alt="Strong Style Pair Programming book"></a>
-</div>
 </section>
 
 
-<section class="dark" id="dark">
+<section class="dark">
+</section>
+
+
+
     <div class="title">
         <h1>Podcast Appearances</h1>
         <ul>
