--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
 
         <div class="card">
             <i class="fas fa-bars"></i>
-            <h5>Books, Blogs, Articles, Podcasts</h5>
+            <h5>Contributions</h5>
             <div class="preview">
-                <p>I have a collection of books, blogs, articles and podcasts I have contributed over the years. </p>
+                <p>I have a collection of books, blogs, articles and podcasts I have contributed over the years. And some awards. </p>
                 <p style="text-align:center;">
-                    <a class="button" href="contents.html#write">Read more...</a>
+                    <a class="button" href="./contributions/">Read more...</a>
                 </p>
             </div>
         </div>
