--- a/contributions/index.html
+++ b/contributions/index.html
@@ -29,7 +29,7 @@
 
 <body>
 
-<h1 class="header">Contributions: Books, Blogs, Articles, Podcasts</h1>
+<h1 class="header">Contributions: My Production, Productions with Me, Awards & Positions</h1>
 
 <section class="dark">
 <h2>Blogs I Write in</h2>
@@ -42,13 +42,12 @@
 
 <section class="light">
     <h2>Books</h2>
-    <div class="books">
+    <div class="books-contributions">
         <a href="http://exploratorytesting.xyz"><img class="books" src="../images/Book-ET.png" alt="Exploratory Testing book"></a>
         <a href="https://ensembleprogramming.xyz"><img class="books" src="../images/Book-Ensemble.png" alt="Ensemble Programming Guidebook"></a>
         <a href="http://strongstylepairprogramming.xyz"><img class="books" src="../images/Book-Pairing.png" alt="Strong Style Pair Programming book"></a>
     </div>
 </section>
-
 
 <section class="dark">
     <h2>Podcast Appearances</h2>
@@ -93,7 +92,6 @@
         <li>Testing in the Pub, <a href="http://testinginthepub.co.uk/testinginthepub/podcast/testing-in-the-pub-episode-22-mobbing-and-pairing-with-maaret-pyhajarvi/">Episode 22 / Mobbing and Pairing with Maaret Pyhäjärvi</a>, November 20th 2015</li>
     </ul>
 </section>
-
 
 <section class="light">
     <h2>Articles</h2>
@@ -147,7 +145,7 @@
       </ul>
 </section>
 
-<section class="light">
+<section class="dark">
     <h2>Others Write about Me</h2>
     <ul>
         <li><a href="https://fi.wikipedia.org/wiki/Maaret_Pyhäjärvi">Maaret Pyhäjärvi on Wikipedia</a></li>
@@ -172,7 +170,7 @@
       </ul>
 </section>
 
-<section class="dark">
+<section class="light">
     <h2>Awards and Nominations</h2>
     <ul>
         <li>TIVIA70 Award 2023 'Kiitoksena työstä Suomen ICT-yhteisöjen rakentajana, kouluttajana ja avoimuuden edistäjänä'</li>
@@ -183,12 +181,6 @@
         <li>TKY Golden Award (<a href="https://tky.polyteekkarimuseo.fi/fi/tky/kunnianosoitukset/kultainen-ansiomerkki/ ">TKY Kultainen Ansiomerkki</a>) 1999, awarded by Teknillisen Korkeakoulun Ylioppilaskunta</li>
         <li><a href="https://tietokilta.fi/kilta/arvomerkit-ja-kunnianosoitukset/ansiomerkeilla-palkitut/ ">ProTiK</a> 1999, awarded by Tietokilta</li>
       </ul>
-</section>
-
-<section class="light">
-    <h2>Mentions on List Articles</h2>
-    <ul>
-</ul>
 </section>
 
 <section class="dark">
@@ -205,7 +197,7 @@
     </ul>
 </section>
 
-<section class="dark">
+<section class="light">
     <h2> Positions of Responsibility</h2>
     <ul>
         <li>2022->    Selenium Project Leadership Committee</li>
