--- a/contributions/index.html
+++ b/contributions/index.html
@@ -42,7 +42,7 @@
 
 <section class="light">
     <h2>Books</h2>
-    <div class="books-contributions">
+    <div class="books2">
         <a href="http://exploratorytesting.xyz"><img class="books" src="../images/Book-ET.png" alt="Exploratory Testing book"></a>
         <a href="https://ensembleprogramming.xyz"><img class="books" src="../images/Book-Ensemble.png" alt="Ensemble Programming Guidebook"></a>
         <a href="http://strongstylepairprogramming.xyz"><img class="books" src="../images/Book-Pairing.png" alt="Strong Style Pair Programming book"></a>
