--- a/contents.html
+++ b/contents.html
@@ -27,7 +27,7 @@
 
         <div class="contents2-title">IMPRESSIVE COLLECTIONS</div>
         <ul>
-          <li> <a href="https://maaretp.com/ETI.html">Exploratory Testing Index </a>
+          <li> <a href=">Exploratory Testing Index </a>
             <i>(stuff on ET I have written, categorized)</i></li>
         </ul>
 
