--- a/contributions/index.html
+++ b/contributions/index.html
@@ -32,7 +32,7 @@
 <h1 class="header">Contributions: My Production, Productions with Me, Awards & Positions</h1>
 
 <section class="dark">
-<h2>Blogs I Write in</h2>
+<h2>Blogs</h2>
 <ul>
        <li><a href="http://visible-quality.blogspot.fi">A Seasoned Testers Crystal Ball</a></li>
           <li><a href="https://medium.com/@maaretp">Maaret on Medium</a></li>
@@ -50,6 +50,15 @@
 </section>
 
 <section class="dark">
+    <h2>Collections</h2>
+    <ul>
+        <li><a href="https://maaretp.com/ETI.html"">Exploratory Testing Index</a></li>
+        <li><a href="">Exploratory Testing Foundations</a> -course, Creative Commons Attribution at <a href="http://exploratorytestingacademy.com/">Exploratory Testing Academy</a></li>
+        <li>The Legacy Project</li>
+    </ul>
+</section>
+
+<section class="light">
     <h2>Podcast Appearances</h2>
     <ul>
         <li>Semaphore podcast, <a href="https://semaphoreci.com/blog/maaret-pyhajarvi">Maaret Pyhäjärvi on Testing in the Modern Age</a>, March 12th, 2024</li>
@@ -93,7 +102,7 @@
     </ul>
 </section>
 
-<section class="light">
+<section class="dark">
     <h2>Articles</h2>
     <ul>
         <li>Change in the world of testing - New Misconceptions from Old Folklore in <a href="https://www.browserstack.com/blog/change-in-the-world-of-testing/">Browserstack blog</a>, Feb 11th, 2022.
@@ -145,7 +154,7 @@
       </ul>
 </section>
 
-<section class="dark">
+<section class="light">
     <h2>Others Write about Me</h2>
     <ul>
         <li><a href="https://fi.wikipedia.org/wiki/Maaret_Pyhäjärvi">Maaret Pyhäjärvi on Wikipedia</a></li>
@@ -170,7 +179,7 @@
       </ul>
 </section>
 
-<section class="light">
+<section class="dark">
     <h2>Awards and Nominations</h2>
     <ul>
         <li>TIVIA70 Award 2023 'Kiitoksena työstä Suomen ICT-yhteisöjen rakentajana, kouluttajana ja avoimuuden edistäjänä'</li>
@@ -183,7 +192,7 @@
       </ul>
 </section>
 
-<section class="dark">
+<section class="light">
     <h2>Conference Program Committees</h2>
     <ul>
         <li>2021-2024 Program Committee Member, SEETEST Conference</li>
@@ -197,7 +206,7 @@
     </ul>
 </section>
 
-<section class="light">
+<section class="dark">
     <h2> Positions of Responsibility</h2>
     <ul>
         <li>2022->    Selenium Project Leadership Committee</li>
