--- a/contributions/index.html
+++ b/contributions/index.html
@@ -103,7 +103,7 @@
 </section>
 
 <section class="dark">
-    <h2>Articles</h2>
+    <h2>Articles I Wrote</h2>
     <ul>
         <li>Change in the world of testing - New Misconceptions from Old Folklore in <a href="https://www.browserstack.com/blog/change-in-the-world-of-testing/">Browserstack blog</a>, Feb 11th, 2022.
         <li>Experiencing 5x Transformation in <a href="https://www.agile-thoughts.com/magazine/jun-2021/">Agile Thoughts Magazine</a> June 2021
